Nov 25 2002  2.7.1  Enormous rewrite of the client-server protocol.  This will
                     have little impact on users of the builtin kismet
                     interfaces, but all external client authors should read
                     docs/DEVEL.client.  Also includes many fixes to the
                     server behavior and revamped commands.
Nov 22 2002  2.7.1  Fixed UDP interrupt error
                    Added build version/timestamp for CVS commits
Nov 17 2002  2.7.1  Merged patch from Chris Waters tweaking the cygwin support
                     for WSP100
                    Fixed WSP100 reporting signal level as quality
                    Put MAC address back in packtype display
Nov 15 2002  2.7.1  Fixed kismet_monitor calling kismet_hopper for new sources
                    Fixed broke probe_req handling caused by the new packet
                     categorizer.
Nov 13 2002  2.7.1  Fixed packetracker incorrect handling of interdistribution
                     data packets.
                    Added kismet_hopper support for the wsp100
Nov 12 2002  2.7.1  Free()'d initial memory allocated for config file parsing
                     in all components, fixed secondary case of kismet_curses
                     not terminating sound/speech forks on an initial conenct
                     failure.
                    Initial tracking of data in bytes through a network
                    Fixed failure to dup some strings before clearing the
                     config memory.
Nov 11 2002  2.7.1  Updated kismet_unmonitor to work with new source format
                    Fixed kismet_curses not terminating sound/speech forks when
                     the initial client connection failed.
                    Updated kismet_hopper to work with new source format
                    Added ability to spread across the channel spectrum when
                     hopping on multiple cards (-d to kismet_hopper)