@@ -3,6 +3,8 @@ Nov 25 2002  2.7.1  Enormous rewrite of the client-server protocol.  This will
                      interfaces, but all external client authors should read
                      docs/DEVEL.client.  Also includes many fixes to the
                      server behavior and revamped commands.
+                    Fixed reconnecting under new server code
+                    Added build number to connect output
 Nov 22 2002  2.7.1  Fixed UDP interrupt error
                     Added build version/timestamp for CVS commits
 Nov 17 2002  2.7.1  Merged patch from Chris Waters tweaking the cygwin support
